<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"

    android:padding="15dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/france"
            tools:ignore="InvalidId" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/popup_country_name"
        style="@style/TitleTextStyle"
        android:layout_width="153dp"
        android:layout_height="74dp"
        android:layout_marginStart="40dp"
        android:text="@string/popup_country_name"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2" />

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/silver" />

    <RatingBar
        android:id="@+id/rating_bar"
        style="@style/CustomRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:rating="0"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cardView2" />

    <ImageView
        android:id="@+id/flag"
        android:layout_width="50dp"
        android:layout_height="33dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/france_flag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

    <TextView
        android:id="@+id/capital_label"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/capital"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flag" />

    <TextView
        android:id="@+id/capital_name"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capital_value"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/capital_label"
        app:layout_constraintTop_toBottomOf="@+id/capital_label" />


    <EditText
        android:id="@+id/note_user"
        style="@style/TitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="247dp"
        android:layout_marginTop="300dp"
        android:background="#555555"
        android:hint="Enter your note..."
        android:inputType="textMultiLine"
        android:gravity="top|start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Devise -->

    <!-- Valeur de la devise -->

    <TextView
        android:id="@+id/superficie_value"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:gravity="center_horizontal"
        android:text="@string/superficie_value"
        app:layout_constraintStart_toEndOf="@+id/superficie_label"
        app:layout_constraintTop_toTopOf="@+id/superficie_label" />

    <TextView
        android:id="@+id/population_label"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-110dp"
        android:layout_marginTop="28dp"
        android:text="@string/population"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_user" />

    <TextView
        android:id="@+id/superficie_label"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-110dp"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/superficie_label"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/population_label" />

    <TextView
        android:id="@+id/text_devise_label"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/devise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/superficie_label" />

    <TextView
        android:id="@+id/text_devise_value"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/devise_value"
        app:layout_constraintStart_toEndOf="@+id/text_devise_label"
        app:layout_constraintTop_toTopOf="@+id/text_devise_label" />

    <TextView
        android:id="@+id/population_value"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/population_value"
        app:layout_constraintStart_toEndOf="@+id/population_label"
        app:layout_constraintTop_toTopOf="@+id/population_label" />


</androidx.constraintlayout.widget.ConstraintLayout>